# Backend/src/main/java/ai/dochandler/entities/Language.java
@@ -1,3 +1,0 @@
-package ai.dochandler.entities;
-
-public record Language(String id, String name) {}
