# Backend/src/main/java/ai/dochandler/model/Language.java
@@ -1,26 +1,0 @@
-package ai.dochandler.model;
-
-public class Language
-{
-    private String id;
-    private String name;
-
-
-    public Language(String id, String name)
-    {
-        this.id = id;
-        this.name = name;
-    }
-
-
-    public String getId()
-    {
-        return(id);
-    }
-
-
-    public String getName()
-    {
-        return(name);
-    }
-}
